# ipv-spec-project

./: README.md
backend/: .gitignore  app.py  network.csv  pyproject.toml
backend/analysis/: parse_csv.py
site/: package-lock.json  package.json  tailwind.config.js
site/.github/: pull_request_template.md
site/pages/: index.tsx
site/src/components/: NextImage.tsx
site/src/context/: analysis.tsx
site/src/lib/: api.ts
site/src/pages/: 404.tsx  _app.tsx  analysis.tsx  gradient.tsx  index.tsx
site/src/pages/wireshark/: record-instructions.tsx  record.tsx  requirements.tsx  upload-mac-addresses.tsx  upload.tsx
site/src/styles/: globals.css
