[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["haydendaly <hcd36@cornell.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.1"
Flask-Cors = "^3.0.10"
pandas = "^1.4.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
